tests/test_templates/rules/SecurityGroupOpenToWorldRule/invalid_security_group_multiple_statements.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "description",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": "10.0.0.0/8",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9090,
            "ToPort": 9090
          }
        ]
      }
    }
  }
}
